--- a/FHR/Base.lproj/Main.storyboard
+++ b/FHR/Base.lproj/Main.storyboard
@@ -727,7 +727,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="pickerView" destination="nkn-gi-2xe" id="Yma-AE-0mP"/>
-                        <segue destination="lbE-km-Yzs" kind="push" identifier="repsDetailsSegue" id="yLw-AI-2eM"/>
+                        <segue destination="uo1-hw-v2I" kind="push" identifier="repsDetailsSegue" id="iLa-CI-clR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1cD-hD-gBZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -828,12 +828,11 @@
                         <outlet property="imageView" destination="91t-Q9-cMS" id="IJO-7e-zgO"/>
                         <outlet property="workoutDescription" destination="0PI-M6-HVq" id="Uhh-OP-NFo"/>
                         <outlet property="workoutName" destination="SNV-cK-N8z" id="bs8-ti-qmv"/>
-                        <segue destination="uo1-hw-v2I" kind="push" identifier="saveRepsSegue" id="YT1-f4-pFO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="by9-wb-bOm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2297" y="-780"/>
+            <point key="canvasLocation" x="2688" y="-780"/>
         </scene>
         <!--Reps Info View Controller-->
         <scene sceneID="OJA-0l-pGS">
@@ -861,16 +860,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hXn-Rs-1qf">
-                                <rect key="frame" x="241" y="435" width="46" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Save">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="save:" destination="uo1-hw-v2I" eventType="touchUpInside" id="50c-JI-02v"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Approximate time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VeD-Re-9xM">
                                 <rect key="frame" x="24" y="120" width="137" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -889,7 +878,15 @@
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="rTQ-1X-whH"/>
+                    <navigationItem key="navigationItem" id="rTQ-1X-whH">
+                        <barButtonItem key="rightBarButtonItem" title="Next" id="tJn-EP-InQ">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="next:" destination="uo1-hw-v2I" id="DUd-Kc-sMy"/>
+                                <segue destination="lbE-km-Yzs" kind="push" identifier="generalWorkoutDetails" id="zlv-4g-cht"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="approxTextField" destination="sAv-pI-VKL" id="E4t-fn-lSf"/>
                         <outlet property="repsTextField" destination="cZ9-sC-yGZ" id="sEL-zz-wUm"/>
@@ -897,7 +894,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5b2-cY-AlR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2699" y="-778"/>
+            <point key="canvasLocation" x="2180" y="-780"/>
         </scene>
         <!--AV Player View Controller-->
         <scene sceneID="Fld-cd-r6e">
